Transparent border to prevent jumpy items

--- a/src/@koop-components/page-components/columns-map/_columns-map.scss
+++ b/src/@koop-components/page-components/columns-map/_columns-map.scss
@@ -89,6 +89,7 @@ $gutter: 1em;
           margin: 1em -1em;
           padding: 1em 1em;
           cursor: pointer;
+          border: 1px solid transparent;
 
           &:hover {
             background: #fff;
